# runpod-serverless-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.env.example  handler.py  model.py  pyproject.toml  requirements.txt  test_local.py
examples/: batch_handler_example.py  custom_model_example.py  error_handling_example.py  postprocess_examples.py
runpod_endpoint/: handler.py
runpod_serverless_template/: .gitignore  __init__.py
runpod_serverless_template/core/: __init__.py  handler.py  model.py
runpod_serverless_template/utils/: __init__.py  gcs.py
scripts/: input_examples.json  test_async_endpoint.py  test_local.py  test_sync_endpoint.py  test_with_gcs.py
src/: __init__.py  handler.py  model.py
